--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
-}
+/* App.css */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.donation-types-container {
+    display: flex;
+    flex-wrap: wrap;
+    ;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  /* Media query for smaller screens (e.g., mobile) */
+  @media (max-width: 767px) {
+    .donation-types-container {
+      justify-content: space-between;
+    }
   }
-  to {
-    transform: rotate(360deg);
+  
+  /* Media query for larger screens (e.g., PC) */
+  @media (min-width: 768px) {
+    .donation-types-container {
+      justify-content: space-around;
+    }
   }
-}
+  
