--- a/src/components/homepage/Donation/Donation.css
+++ b/src/components/homepage/Donation/Donation.css
@@ -1,30 +1,39 @@
 .donation-type {
-    text-align: center;
-    margin: 20px;
-  }
-  
-  .donation-image {
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    object-fit: cover; /* Ensure the image covers the circular container */
-  }
-  
-  .donation-title {
-    margin-top: 10px;
-    font-size: 1.5rem;
-  }
-  
-  .donation-description {
-    margin-top: 10px;
-    color: #666;
-  }
-  
-  .btn-donate {
-    padding: 8px 16px;
-    background-color: #28a745;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-  }
-  
+  text-align: center;
+  margin: 20px;
+  border-radius: 30px;
+}
+
+.donation-image {
+  padding: 1rem;
+  width: 8rem;
+  height: 8rem;
+}
+.donation-img-container{
+border: 1px solid;
+width: 9rem;
+height: 9rem;
+margin-left: auto;
+margin-right: auto;
+border-radius: 50%;
+margin-top: 8%;
+
+}
+.donation-title {
+  margin-top: 10px;
+  font-size: 1.5rem;
+}
+
+.donation-description {
+  margin-top: 10px;
+  color: #666;
+}
+
+.btn-donate {
+  padding: 8px 16px;
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+}
