--- a/src/components/homepage/Donation/Donation.css
+++ b/src/components/homepage/Donation/Donation.css
@@ -1,6 +1,5 @@
 .donation-type {
   text-align: center;
-  margin: 20px;
   border-radius: 30px;
 }
 
@@ -30,10 +29,16 @@ margin-top: 8%;
 }
 
 .btn-donate {
-  padding: 8px 16px;
+  padding: 5% 8%;
   background-color: #28a745;
   color: #fff;
   border: none;
   cursor: pointer;
   border-radius: 10px;
+}
+
+@media screen and (max-width:480px) {
+  .donation-type{
+    margin: -0.5rem;
+  }
 }
