--- a/src/components/common/Footer/Footer.css
+++ b/src/components/common/Footer/Footer.css
@@ -5,6 +5,8 @@
     background-color: #f8f9fa;
     padding: 20px 0;
     text-align: center;
+    border-radius: 10px;
+    margin-bottom: 1rem;
   }
   
   .vertical-line {
