--- a/src/components/common/Header/Header.css
+++ b/src/components/common/Header/Header.css
@@ -28,6 +28,12 @@
       margin-right: 0.5rem;
     }
   }
+  .header-btn-donate{
+    padding: 0.5rem 1.5rem;
+    border-radius: 10px;
+    width: 150%;
+    font-size: 1rem;
+  }
   
   /* Custom styles for larger buttons in mobile navbar */
 @media (max-width: 768px) {
