--- a/src/components/homepage/About/About.css
+++ b/src/components/homepage/About/About.css
@@ -14,9 +14,15 @@ text-transform: uppercase;
 .about-text{
     color: #3A405A;
 font-family: Roboto;
-font-size: 1.3rem;
+font-size: 1.2rem;
 font-style: normal;
 font-weight: 400;
 line-height: 2.2rem; 
 text-transform: capitalize;
+}
+.about-donate-btn{
+    text-align: center;
+    padding: 0.5rem 1rem;
+    border-radius: 10px;
+    font-size: 1.2rem;
 }
