--- a/src/components/homepage/NewsletterSection/NewsletterSection.css
+++ b/src/components/homepage/NewsletterSection/NewsletterSection.css
@@ -1,20 +1,81 @@
-/* src/components/NewsletterSection/NewsletterSection.css */
-/* Add your styles for the NewsletterSection component */
 
-.newsletter-section {
-    padding: 30px 0;
-  }
+.input-group input {
+  border-radius: 10px !important;
+  height: 3rem;
+}
+
+.input-group button {
+  border-radius: 10px;
+  height: 3rem;
+  font-size: 1.5rem;
   
-  .input-group {
-    max-width: 300px; /* Adjust the width of the input box */
-    margin-top: 10px;
+}
+
+.newsletter-input-sec {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.newsletter-heading {
+  color: #3a405a;
+  font-family: Roboto;
+  font-size: 2.7rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 4.75rem;
+  text-transform: uppercase;
+}
+
+.newsletter-img {
+  width: 70%;
+}
+
+.newsletter-subheading {
+  font-family: Roboto;
+  font-size: 1.3rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 2.875rem;
+  text-transform: capitalize;
+}
+
+.newsletter-email {
+  border-radius: 10px;
+}
+
+.newsletter-sub-btn {
+  border-radius: 10px;
+}
+.newsletter-right-sec{
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+}
+
+@media screen and (max-width: 480px) {
+  .newsletter-section {
+    text-align: center;
   }
-  
-  .input-group input {
-    border-radius: 0; /* Remove border-radius if not needed */
+
+  .newsletter-heading {
+    color: #3a405a;
+    font-family: Roboto;
+    font-size: 1.51rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 2.5rem;
+    text-transform: uppercase;
   }
-  
-  .input-group button {
-    border-radius: 0; /* Remove border-radius if not needed */
+  .newsletter-subheading {
+    font-family: Roboto;
+    font-size: 1.15rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5rem;
+    text-transform: capitalize;
   }
-  
+  .newsletter-img {
+    width: 100%;
+  }
+}
