--- a/src/components/homepage/Hero/Hero.css
+++ b/src/components/homepage/Hero/Hero.css
@@ -7,7 +7,7 @@
 .hero-heading {
   color: #3a405a;
   font-family: Roboto;
-  font-size: 3.75rem;
+  font-size: 3.75rem !important;
   font-style: normal;
   font-weight: 700;
   line-height: 5.1875rem;
