--- a/src/components/donate/Popup/Popup.css
+++ b/src/components/donate/Popup/Popup.css
@@ -1,6 +1,6 @@
 /* Popup.css
 
-.popup-container {
+/* .popup-container {
     display: none;
     position: fixed;
     top: 0;
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1;
-  }
+  } */
   
   .popup-content {
     background: #fff;
