download reciept and conditional download certificate pdf generation

--- a/src/components/donate/Popup-thankyou/Thankyou.css
+++ b/src/components/donate/Popup-thankyou/Thankyou.css
@@ -31,6 +31,15 @@
     color: #337ab7; /* Primary blue color */
     text-decoration: none;
   }
+
+  .certificate-link {
+    margin-bottom: 0;
+  }
+  
+  .certificate-link-button {
+    color: #337ab7; /* Primary blue color */
+    text-decoration: none;
+  }
   
   .popup-close {
     position: absolute;
