--- a/src/Dashboard/Navbar.css
+++ b/src/Dashboard/Navbar.css
@@ -2,4 +2,17 @@
 .navbar {
     background-color: blue !important; /* Set a blue background color */
   }
+ @media screen and (max-width:480px) {
+  
+ }
+ @media (max-width: 991px) { /* Target medium and small screens */
+  .navbar-toggler {
+    display: none; /* Hide the hamburger button */
+  }
+
+  .navbar-collapse {
+    display: flex; /* Keep the navbar items visible */
+    flex-wrap: nowrap; /* Prevent wrapping */
+  }
+}    
   
