--- a/src/Dashboard/Dashboard.css
+++ b/src/Dashboard/Dashboard.css
@@ -2,10 +2,12 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    position: relative;
+    left: 1.5rem;
 }
 .logout-btn{
     position: relative;
-    right: 3.5rem;
+    right: 6rem;
 }
 .add-prod-btn{
     position: relative;
@@ -14,10 +16,12 @@
 .download-btn{
     position: relative;
     left: 32rem;
+
 }
+/* ************************************************************** */
 @media screen and (max-width:480px) {
     .logout-btn{
-       margin-left:2.5rem ;
+       margin-left:5.2rem ;
         
     }
     .dash-top-btns{
