--- a/src/components/homepage/Hero/Hero.css
+++ b/src/components/homepage/Hero/Hero.css
@@ -1,6 +1,10 @@
 /* .hero-section{
-  height: 100vh;
-} */
+  background-image: url(../../../assets/banner.png);
+  background-size: 100% 100%; 
+
+  
+  
+}  */
 .hero-text {
   margin-top: 4rem;
 }
