--- a/src/components/homepage/Hero/Hero.css
+++ b/src/components/homepage/Hero/Hero.css
@@ -1,10 +1,10 @@
-/* .hero-section{
-  background-image: url(../../../assets/banner.png);
+.hero-section{
+  background-image: url(../../../assets/banner.jpg);
   background-size: 100% 100%; 
 
   
   
-}  */
+} 
 .hero-text {
   margin-top: 4rem;
 }
