--- a/src/components/homepage/MonthlyMission/MonthlyMission.css
+++ b/src/components/homepage/MonthlyMission/MonthlyMission.css
@@ -19,7 +19,7 @@ line-height: 2.875rem;
 text-transform: capitalize;
 }
 .monthly-mission-btn{
-    background-color: magenta;
+    background-color: #1b6d98;
     border-radius: 10px;
     border: none;
     padding: 0.5rem 1rem;
