--- a/src/components/homepage/About/About.css
+++ b/src/components/homepage/About/About.css
@@ -1,3 +1,6 @@
+.about-section{
+    margin: 0rem 0.75rem;
+}
 .about-heading{
 color: #3A405A;
 font-family: Roboto;
@@ -14,7 +17,7 @@ text-transform: uppercase;
 .about-text{
     color: #3A405A;
 font-family: Roboto;
-font-size: 1.2rem;
+font-size: 1.1rem;
 font-style: normal;
 font-weight: 400;
 line-height: 2.2rem; 
