--- a/src/components/homepage/Donation/Donation.css
+++ b/src/components/homepage/Donation/Donation.css
@@ -1,6 +1,7 @@
 .donation-type {
   text-align: center;
   border-radius: 30px;
+  height: 27rem;
 }
 
 .donation-image {
@@ -9,7 +10,8 @@
   height: 8rem;
 }
 .donation-img-container{
-border: 1px solid;
+  background-color: #fff;
+/* border: 1px solid; */
 width: 9rem;
 height: 9rem;
 margin-left: auto;
@@ -25,23 +27,30 @@ margin-top: 8%;
 
 .donation-description {
   margin-top: 10px;
-  color: #666;
+  color: white;
 }
 
 .btn-donate {
   padding: 5% 8%;
-  background-color: #28a745;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
   border: none;
   cursor: pointer;
   border-radius: 10px;
 }
 
+.card-title{
+  color: white;
+}
+
 @media screen and (max-width:480px) {
+  .donation-description{
+    font-size: 0.75rem;
+  }
   .donation-type{
     margin: -0.5rem;
   }
   .donation-type{
-    height: 30rem;
+    height: 27rem;
   }
 }
