--- a/src/components/homepage/Glance/Glance.css
+++ b/src/components/homepage/Glance/Glance.css
@@ -6,12 +6,22 @@
   
   .icon-square {
     color: #3A405A;
-    width: 80px; /* Adjust the width as needed */
-    height: 80px; /* Adjust the height as needed */
+    width: 7rem; /* Adjust the width as needed */
+    height: 7rem; /* Adjust the height as needed */
     border-radius: 10px;
     overflow: hidden;
     margin: 0 auto 10px;
-    border: 1px solid;
+    box-shadow: 0px 0px 21px #00000029;
+    padding: 1rem;
+  }
+  .icon-square:hover{
+    background-color: #3A405A;
+    transition: background-color 0.25s, filter 0.25s ease-in-out;
+  }
+
+  .icon-square:hover .icon {
+    filter: brightness(0) saturate(100%) invert(100%);
+    transition: background-color 0.25s, filter 0.25s ease-in-out;
   }
   
   .icon {
