--- a/src/components/common/Footer/Footer.css
+++ b/src/components/common/Footer/Footer.css
@@ -22,6 +22,10 @@
     
     border-radius: 15px;
   }
+.footer-map-div iframe{
+border: none;
+}
+
 
   @media screen and (max-width:480px) {
     .footer-map{
