--- a/src/components/common/Hero/Hero.css
+++ b/src/components/common/Hero/Hero.css
@@ -15,7 +15,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Adjust the alpha channel for transparency */
+    background-color: rgba(0, 0, 0, 0.5); 
   }
   
   .heroimg-text {
@@ -24,9 +24,9 @@
     left: 50%;
     font-size: 35px;
     transform: translate(-50%, -50%);
-    color: #fff; /* Set the text color to contrast with the overlay */
+    color: #fff;
     text-align: center;
-    z-index: 1; /* Place text above the overlay */
+    z-index: 1;
   }
   
   .heroimg-text h1 {
