--- a/src/components/donate/Popup/Popup.css
+++ b/src/components/donate/Popup/Popup.css
@@ -1,17 +1,4 @@
-/* Popup.css
 
-/* .popup-container {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-  } */
   
   .popup-content {
     background: #fff;
@@ -72,7 +59,7 @@
   .popup-btn:hover {
     background-color: #45a049;
   }
-   */
+   
    .popup-container {
     position: relative;
   }
@@ -86,7 +73,7 @@
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px; /* Adjust the width as needed */
+    width: 300px;
   }
   
   .popup-close {
