--- a/src/components/homepage/GenerositySection/GenerositySection.css
+++ b/src/components/homepage/GenerositySection/GenerositySection.css
@@ -27,7 +27,7 @@
 
 
 .generosity-icon img {
-  width: 100px; /* Adjust the size of the icons */
+  width: 100px; 
   height: 100px;
 }
 .occasions-heading {
@@ -47,7 +47,7 @@
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 2.875rem; /* 184% */
+  line-height: 2.875rem; 
   text-transform: capitalize;
 }
 .occasion-donate-btn {
@@ -85,7 +85,7 @@
     margin: 0rem 1rem;
   }
   .generosity-icon img {
-    width: 80px; /* Adjust the size of the icons */
+    width: 80px; 
     height:80px;
   }
   .gen-name{
