--- a/src/components/common/Header/Header.css
+++ b/src/components/common/Header/Header.css
@@ -34,6 +34,13 @@
   
   /* Custom styles for larger buttons in mobile navbar */
 @media (max-width: 768px) {
+  .header-btn-donate{
+    
+    
+    width: 100%;
+    font-size: 1.2rem;
+    
+      }
   .comm-header-logo{
     width: 15vw;
   }
