--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -6,7 +6,7 @@
 .contact-card{
     margin-top: 70.5px;
     background: #fff;
-    box-shadow: 0px 3px 6px rgba(0 0 0 16%);
+    box-shadow: 0px 3px 6px rgba(0 0 0/16%);
     padding: 3.5rem 1.5rem;
     text-align: center;
     -webkit-transition: all 0.3s ease;
