--- a/src/components/homepage/About/About.css
+++ b/src/components/homepage/About/About.css
@@ -11,7 +11,9 @@ line-height: normal;
 text-transform: uppercase;
 }
 .about-img{
-    border-radius: 10px;
+    border-radius: 25px;
+    padding: 0;
+    margin-bottom: 1rem;
     
 }
 .about-text{
